feat: implementar endpoint de logout e lógica para invalidação de refresh token
